# libandfill

./: CMakeLists.txt  COPYING  README
CMake/: tests.c
include/: CMakeLists.txt  config.h.in
include/landfill/: error.h  message.h  version.h
lib/: CMakeLists.txt  message.c
