cmake_minimum_required(VERSION 2.8)

PROJECT(libandfill C)

file(READ ${libandfill_SOURCE_DIR}/include/landfill/version.h LANDFILL_VERSION_H_CONTENTS)
string(REGEX MATCH "LANDFILL_VERSION_FLAVOUR[ \t]+\"([A-Z]+)\"" LANDFILL_VERSION_FL ${LANDFILL_VERSION_H_CONTENTS})
string(REGEX MATCH "(CURRENT|STABLE|ALPHA|BETA|PRERELEASE|RELEASE)" LANDFILL_VERSION_FL ${LANDFILL_VERSION_FL})
string(REGEX MATCH "LANDFILL_VERSION_MAJOR[ \t]+([0-9]+)" LANDFILL_VERSION_MJ ${LANDFILL_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" LANDFILL_VERSION_MJ ${LANDFILL_VERSION_MJ})
string(REGEX MATCH "LANDFILL_VERSION_MINOR[ \t]+([0-9]+)" LANDFILL_VERSION_MI ${LANDFILL_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" LANDFILL_VERSION_MI ${LANDFILL_VERSION_MI})
string(REGEX MATCH "LANDFILL_VERSION_PATCH[ \t]+([0-9]+)" LANDFILL_VERSION_PT ${LANDFILL_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" LANDFILL_VERSION_PT ${LANDFILL_VERSION_PT})
string(REGEX MATCH "LANDFILL_VERSION_SUFFX[ \t]+([0-9]+)" LANDFILL_VERSION_SX ${LANDFILL_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" LANDFILL_VERSION_SX ${LANDFILL_VERSION_SX})

string(COMPARE EQUAL ${LANDFILL_VERSION_FL} "RELEASE" LANDFILL_RELEASE)
if(LANDFILL_RELEASE)
	set(LANDFILL_VERSION ${LANDFILL_VERSION_MJ}.${LANDFILL_VERSION_MI}.${LANDFILL_VERSION_PT})
else(LANDFILL_RELEASE)
	string(COMPARE EQUAL ${LANDFILL_VERSION_FL} "PRERELEASE" LANDFILL_PRERELEASE)
	if(LANDFILL_PRERELEASE)
		set(LANDFILL_VERSION ${LANDFILL_VERSION_MJ}.${LANDFILL_VERSION_MI}.${LANDFILL_VERSION_PT}-rc${LANDFILL_VERSION_SX})
	else(LANDFILL_PRERELEASE)
		string(COMPARE EQUAL ${LANDFILL_VERSION_FL} "BETA" LANDFILL_BETA)
		if(LANDFILL_BETA)
			set(LANDFILL_VERSION ${LANDFILL_VERSION_MJ}.${LANDFILL_VERSION_MI}.${LANDFILL_VERSION_PT}-b${LANDFILL_VERSION_SX})
		else(LANDFILL_BETA)
			string(COMPARE EQUAL ${LANDFILL_VERSION_FL} "ALPHA" LANDFILL_ALPHA)
			if(LANDFILL_ALPHA)
				set(LANDFILL_VERSION ${LANDFILL_VERSION_MJ}.${LANDFILL_VERSION_MI}.${LANDFILL_VERSION_PT}-a${LANDFILL_VERSION_SX})
			else(LANDFILL_ALPHA)
				string(COMPARE EQUAL ${LANDFILL_VERSION_FL} "STABLE" LANDFILL_STABLE)
				if(LANDFILL_STABLE)
					set(LANDFILL_VERSION ${LANDFILL_VERSION_MJ}.${LANDFILL_VERSION_MI}-STABLE)
				else(LANDFILL_STABLE)
					set(LANDFILL_VERSION ${LANDFILL_VERSION_MJ}.0-CURRENT)
				endif(LANDFILL_STABLE)
			endif(LANDFILL_ALPHA)
		endif(LANDFILL_BETA)
	endif(LANDFILL_PRERELEASE)
endif(LANDFILL_RELEASE)

set(PACKAGE "libandfill")
set(PACKAGE_NAME ${PACKAGE})
set(PACKAGE_VERSION ${LANDFILL_VERSION})

set(CMAKE_C_FLAGS "${CMAKE_ANSI_CFLAGS} ${CMAKE_C_FLAGS}")
set(CMAKE_REQUIRED_FLAGS ${CMAKE_ANSI_CFLAGS})
set(CMAKE_REQUIRED_LIBRARIES ${LANDFILL_LIBS})
set(LANDFILL_LIBS "")

add_subdirectory(include)
add_subdirectory(lib)